# autocommit

./: .gitignore  BRIEF.md  LICENSE  README.md  autocommit.py  commit.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_autocommit.py
